# CurvaturePriorElasticaModel

./: README.md
HFMImplementation/ComputeCurvaturePriorMap/Src_ModifiedHFM/GeoMetrics/: CMakeLists.txt
HFMImplementation/ComputeCurvaturePriorMap/Src_ModifiedHFM/GeoMetrics/Experimental/: CMakeLists.txt  PrescribedCurvature2.h  RegionalCurvature2.h
HFMImplementation/ComputeCurvaturePriorMap/Src_ModifiedHFM/GeoMetrics/Specializations/: Curvature2.h  Riemannian.h
HFMImplementation/ComputeCurvaturePriorMap/Src_ModifiedHFM/JMM_CPPLibs/: CMakeLists.txt
HFMImplementation/ComputeCurvaturePriorMap/Src_ModifiedHFM/Matlab_ExtendingVelocity/: CMakeLists.txt  CompileMexHFM.m  HamiltonExtendingVelocity.cxx
HFMImplementation/ComputeCurvaturePriorMap/Src_ModifiedHFM/Matlab_ExtendingVelocity/FastMarchingBase/: CMakeLists.txt  DispatchAndRun.h
HFMImplementation/ComputeCurvaturePriorMap/Src_ModifiedHFM/Matlab_ExtendingVelocity/FastMarchingBase/Base/: HFMInterface.h
HFMImplementation/ComputeCurvaturePriorMap/Src_ModifiedHFM/Matlab_ExtendingVelocity/FastMarchingBase/Base/Implementation/: HFMInterface.hxx  HamiltonFastMarching.hxx
HFMImplementation/ComputeCurvaturePriorMap/Src_ModifiedHFM/Matlab_ExtendingVelocity/FastMarchingBase/ExtraAlgorithms/: CMakeLists.txt  CommonStoppingCriteria.h  EuclideanPathLength.h  VelocityExtension.h  VoronoiDiagram.h
HFMImplementation/ComputeCurvaturePriorMap/Src_ModifiedHFM/Matlab_GeodesicDistanceComputation/: CMakeLists.txt  CompileMexHFM.m  HamiltonGeodesicDistanceComputation.cxx
HFMImplementation/HJBSolver/Src_HamiltonFastMarching/: Doxyfile  License.txt  Readme.md
PNAS_Results/ConstructCandidateCenterlines_Fig4/data/: rawImg.mat  tubularScore.mat
PNAS_Results/IllustrateControlSets_Fig3/: PlotControlSet_Elastica.m
PNAS_Results/IllustrateDifferentConstantPriorValues_Fig5/: Illustration_DifferentPriors.m
PNAS_Results/IllustrateDifferentConstantPriorValues_Fig5/data/: cGeodesics3.mat
PNAS_Results/IllustrateOrientationScores_Fig2/: Illustration_PolarPlot.m
PNAS_Results/IllustrateOrientationScores_Fig2/data/: Y.mat  Z.mat  listOS2.mat
ResultsInPaper/ConstructCandidateCenterlines_Fig4/: Illustration_GenerationFig4.m
ResultsInPaper/ConstructCandidateCenterlines_Fig4/data/: cPaths_Rectified.mat
ResultsInPaper/IllustrateControlSets_Fig3/: PlotControlSet_PriorElastica.m
ResultsInPaper/IllustrateDifferentConstantPriorValues_Fig5/data/: cGeodesics.mat  cGeodesics1.mat  cGeodesics2.mat
ResultsInPaper/IllustrateMotivation_Fig1/: Illustration_Comparision.m
ResultsInPaper/IllustrateMotivation_Fig1/data/: mRescaledGeo_Elastica.mat  mRescaledGeo_Prior.mat  rawImg.mat
ResultsInPaper/IllustrateOrientationScores_Fig2/: Illstration_3Dview.m
ResultsInPaper/IllustrateOrientationScores_Fig2/data/: X.mat  listOS1.mat  rawImg.mat
ResultsInPaper/Illustration_CurveRecover_Fig6/: Illustration_CurveRecover.m
ResultsInPaper/Illustration_CurveRecover_Fig6/data/: cGeodesics_Prior.mat
Utilities/: ComputeJaccardScore.m  ComputeSpatialGeodesicDistance.m  ConstructCurvaturePriorMap.m  ConstructVoronoiTessellation.m  CurvatureEstimationFromPath.m  DetectOptimalOriens.m  FindClickedPoints.m  MakeSpiralLine.m  RectifySegmentEndPoints.m  RemoveNeighPointsFromEnlargedNeighbourhood.cpp  RemoveNeighPointsFromEnlargedNeighbourhood.mexmaci64  RemoveSmallSegments.m  RescaledCoords.m  TubularNeighbourhood_OpenCurve.m  func_DrawArrow.m
(+716 files in other folders)
